# livestream-codewhisperer

./: README.md
aws-bash/: aws-lambda.sh  s3-bucket-lister.sh
multiline-test/: Cargo.toml
multiline-test/src/: main.rs
rust-dyno/: Cargo.toml  Makefile
rust-dyno/src/: main.rs
s3-bucket-lister-lambda/: Cargo.toml
s3-bucket-lister-lambda/src/: main.rs
s3-list/: Cargo.toml
s3-list/src/: main.rs
