[package]
name = "s3-bucket-lister-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.1"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"

